fix: modify text align of how to use

--- a/css/components/section.css
+++ b/css/components/section.css
@@ -118,6 +118,7 @@
   justify-content: center;
   align-items: flex-start;
   color: var(--main-color);
+  height: 10rem;
 }
 
 .section__overlay {
